fixed team member hover problem with padding on mobile

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1882,7 +1882,7 @@ nav{
   }
   @include respond-to(small){
     width:100%;
-    padding-top:45vh;
+    padding-top:55vh;
     margin-top:0;
     padding-bottom:7vh;
   }
